--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -440,29 +440,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9f4e69456cf495c8eb000e674412348",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(geometries=[], gradient_opacity=0.22, point_sets=[], rendered_image=<itkImagePython.itkImageUC3; proxy …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "TypeError",
+     "evalue": "'itkImageUC3' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-2934ea11bf36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0minput_filename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"images/bead_pack_artifacts_small.tif\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrotate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m14000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m17000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient_opacity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'itkImageUC3' object is not subscriptable"
+     ]
     }
    ],
    "source": [
     "#Reading with itk\n",
     "input_filename=\"images/bead_pack_artifacts_small.tif\"\n",
     "image = itk.imread(input_filename)\n",
-    "view(image)"
+    "view(image[::2,::2,::2], rotate=True, vmin=14000, vmax=17000, gradient_opacity=0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Data shape: (200, 200, 200)\n",
+      "* Data type:  uint8\n",
+      "* Data range: (29, 239)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#convert to nnumpy array\n",
+    "image_np = itk.GetArrayFromImage(image)\n",
+    "print(f\"* Data shape: {image_np.shape}\")\n",
+    "print(f\"* Data type:  {image_np.dtype}\")\n",
+    "print(f\"* Data range: ({image_np.min()}, {image_np.max()})\")"
    ]
   },
   {
@@ -471,9 +491,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"* Data shape: {relabeled.shape}\")\n",
-    "print(f\"* Data type:  {relabeled.dtype}\")\n",
-    "print(f\"* Data range: ({relabeled.min()}, {relabeled.max()})\")"
+    "Nu\n",
+    "[::2,::2,::2]"
    ]
   },
   {
@@ -494,7 +513,8 @@
    "metadata": {},
    "source": [
     "## Exercise 3. \n",
-    "Read the file at images/cells_interior_labels.tiff using skimage, then convert the file to visualize with itkwidgets"
+    "- Explore the parameters in `view` such as rotate=True, gradient_opacity=0.4\n",
+    "- Read the file at images/cells_interior_labels.tiff using skimage, then convert the file to visualize with itkwidgets"
    ]
   },
   {
