--- a/tutorial_notebooks/00_fundamentals_skimage.ipynb
+++ b/tutorial_notebooks/00_fundamentals_skimage.ipynb
@@ -4,6 +4,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analysis and visualization of 3D data in Python\n",
+    "\n",
+    "Daniela Ushizima, Alexandre de Siqueira, Stéfan van der Walt\n",
+    "\n",
+    "BIDS @ University of California, Berkeley\n",
+    "\n",
+    "Lawrence Berkeley National Laboratory - LBNL\n",
+    "\n",
+    "* Support material for the tutorial _Analysis and visualization of 3D data in Python_.\n",
+    "\n",
+    "This tutorial will introduce how to analyze three dimensional stacked and volumetric\n",
+    "images in Python, mainly using scikit-image. Here we will learn how to:\n",
+    "  * pre-process data using filtering, binarization and segmentation techniques.\n",
+    "  * inspect, count and measure attributes of objects and regions of interest in the data.\n",
+    "  * visualize 3D data.\n",
+    "\n",
+    "Please prepare for the tutorial by [installing the pre-requisite\n",
+    "software](preparation.md) beforehand.\n",
+    "\n",
+    "For more info:\n",
+    "  * [[ISVC 2019]](https://www.isvc.net/)\n",
+    "  * [[scikit-image]](https://scikit-image.org/)\n",
+    "\n",
+    "\n",
+    "## What is scikit-image?\n",
+    "\n",
+    "scikit-image is a collection of image processing algorithms which aims to integrate well with for the SciPy ecosystem.\n",
+    "\n",
+    "It is well documented, and provides well-tested code to quickly build sophisticated image processing pipelines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style='font-size: 200%; line-height: 2;'>\n",
     "To participate, you'll need to git clone (or download the .zip from GitHub):\n",
     "\n",
@@ -694,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
