--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -4,6 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Analysis and visualization of 3D data in Python\n",
+    "\n",
+    "Daniela Ushizima, Alexandre de Siqueira, Stéfan van der Walt\n",
+    "\n",
+    "_BIDS @ University of California, Berkeley_\n",
+    "\n",
+    "_Lawrence Berkeley National Laboratory - LBNL_\n",
+    "\n",
+    "* Support material for the tutorial _Analysis and visualization of 3D data in Python_.\n",
+    "\n",
+    "This tutorial will introduce how to analyze three dimensional stacked and volumetric\n",
+    "images in Python, mainly using scikit-image. Here we will learn how to:\n",
+    "  * pre-process data using filtering, binarization and segmentation techniques.\n",
+    "  * inspect, count and measure attributes of objects and regions of interest in the data.\n",
+    "  * visualize 3D data.\n",
+    "\n",
+    "Please prepare for the tutorial by [installing the pre-requisite\n",
+    "software](preparation.md) beforehand.\n",
+    "\n",
+    "For more info:\n",
+    "  * [[ISVC 2019]](https://www.isvc.net/)\n",
+    "  * [[scikit-image]](https://scikit-image.org/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Visualization in python\n",
     "There are several [visualization](https://en.wikipedia.org/wiki/Edge_detection) tools for 3D imagery have been developed with/for Python, for example\n",
     "Matplotlib (Hunter, 2007), Mayavi (Ramachandran & Varoquaux, 2011), the [ipyvolume](https://github.com/maartenbreddels/ipyvolume/), the yt Project\n",
