--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis and visualization of 3D data in Python\n",
+    "\n",
+    "Daniela Ushizima, Alexandre de Siqueira, Stéfan van der Walt\n",
+    "\n",
+    "_BIDS @ University of California, Berkeley_\n",
+    "\n",
+    "_Lawrence Berkeley National Laboratory - LBNL_\n",
+    "\n",
+    "* Support material for the tutorial _Analysis and visualization of 3D data in Python_.\n",
+    "\n",
+    "This tutorial will introduce how to analyze three dimensional stacked and volumetric\n",
+    "images in Python, mainly using scikit-image. Here we will learn how to:\n",
+    "  * pre-process data using filtering, binarization and segmentation techniques.\n",
+    "  * inspect, count and measure attributes of objects and regions of interest in the data.\n",
+    "  * visualize 3D data.\n",
+    "\n",
+    "Please prepare for the tutorial by [installing the pre-requisite\n",
+    "software](preparation.md) beforehand.\n",
+    "\n",
+    "For more info:\n",
+    "  * [[ISVC 2019]](https://www.isvc.net/)\n",
+    "  * [[scikit-image]](https://scikit-image.org/)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -376,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
