--- a/tutorial_notebooks/01_2d3d_processing.ipynb
+++ b/tutorial_notebooks/01_2d3d_processing.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ImageXD 2019 - Images across domains\n",
+    "# Analysis and visualization of 3D data in Python\n",
     "\n",
-    "BIDS @ University of California, Berkeley\n",
+    "Daniela Ushizima, Alexandre de Siqueira, Stéfan van der Walt\n",
     "\n",
-    "* Support material for the tutorial _scikit-image: 3D Image Processing_.\n",
+    "_BIDS @ University of California, Berkeley_\n",
+    "\n",
+    "_Lawrence Berkeley National Laboratory - LBNL_\n",
+    "\n",
+    "* Support material for the tutorial _Analysis and visualization of 3D data in Python_.\n",
     "\n",
     "This tutorial will introduce how to analyze three dimensional stacked and volumetric\n",
     "images in Python, mainly using scikit-image. Here we will learn how to:\n",
@@ -20,15 +24,8 @@
     "software](preparation.md) beforehand.\n",
     "\n",
     "For more info:\n",
-    "  * [[ImageXD 2019]](https://xd-con.org/imagexd-2019/)\n",
-    "  * [[scikit-image]](https://scikit-image.org/)\n",
-    "\n",
-    "\n",
-    "## What is scikit-image?\n",
-    "\n",
-    "scikit-image is a collection of image processing algorithms which aims to integrate well with for the SciPy ecosystem.\n",
-    "\n",
-    "It is well documented, and provides well-tested code to quickly build sophisticated image processing pipelines."
+    "  * [[ISVC 2019]](https://www.isvc.net/)\n",
+    "  * [[scikit-image]](https://scikit-image.org/)"
    ]
   },
   {
