instatiate and complete or remove

--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -341,7 +341,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#instatiate"
+   ]
   },
   {
    "cell_type": "markdown",
