keeping only numba

--- a/tutorial_notebooks/04_io_parallel.ipynb
+++ b/tutorial_notebooks/04_io_parallel.ipynb
@@ -36,7 +36,7 @@
    },
    "outputs": [],
    "source": [
-    "# numba and joblib"
+    "# numba "
    ]
   },
   {
@@ -49,51 +49,6 @@
    "source": [
     "import numpy as np"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -121,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This way, Numba decides what it should optimize in your functions. To show how fast this decorator is, let's define two versions of a dummy Fibonacci function. One `fibonacci_no_numba`, does not use Numba:"
+    "This way, Numba decides what it should optimize in your functions. To show how fast this **decorator** is, let's define two versions of a dummy Fibonacci function. One `fibonacci_no_numba`, does not use Numba:"
    ]
   },
   {
