--- a/tutorial_notebooks/04_io_parallel.ipynb
+++ b/tutorial_notebooks/04_io_parallel.ipynb
@@ -29,14 +29,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# numba "
+    "## Using joblib to parallelize code"
    ]
   },
   {
@@ -48,6 +46,37 @@
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bilateral_classic_loop():\n",
+    "    cells_bilateral = np.empty_like(cells_rescaled)\n",
+    "    for plane, image in enumerate(cells_rescaled):\n",
+    "        cells_bilateral[plane] = restoration.denoise_bilateral(image, multichannel=False)\n",
+    "    return cells_bilateral\n",
+    "\n",
+    "%timeit bilateral_classic_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from joblib import Parallel, delayed\n",
+    "\n",
+    "# when using n_jobs=-2, all CPUs but one are used.\n",
+    "\n",
+    "def bilateral_joblib_loop():\n",
+    "    cells_bilateral = Parallel(n_jobs=-2)(delayed(restoration.denoise_bilateral)(image,multichannel=False) for image in cells_rescaled)\n",
+    "\n",
+    "%timeit bilateral_joblib_loop()"
    ]
   },
   {
