--- a/tutorial_notebooks/03_danials19_wrkshp.ipynb
+++ b/tutorial_notebooks/03_danials19_wrkshp.ipynb
@@ -314,25 +314,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <a id='morphology'></a>[skimage.morphology](https://scikit-image.org/docs/stable/api/skimage.morphology.html) - binary and grayscale morphology\n",
-    "\n",
-    "Morphological image processing is a collection of non-linear operations related to the shape or morphology of features in an image, such as boundaries, skeletons, etc. In any given technique, we probe an image with a small shape or template called a structuring element, which defines the region of interest or neighborhood around a pixel.\n",
-    "\n",
-    "[Mathematical morphology](https://en.wikipedia.org/wiki/Mathematical_morphology) operations and structuring elements are defined in `skimage.morphology`. Structuring elements are shapes which define areas over which an operation is applied. The response to the filter indicates how well the neighborhood corresponds to the structuring element's shape.\n",
-    "\n",
-    "There are a number of two and three dimensional structuring elements defined in `skimage.morphology`. Not all 2D structuring element have a 3D counterpart. The simplest and most commonly used structuring elements are the `disk`/`ball` and `square`/`cube`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skimage import morphology  # skimage's morphological submodules."
+    "# skimage's morphological submodules.\n",
+    "from skimage import morphology  "
    ]
   },
   {
@@ -390,24 +378,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It's clear that we need to improve the segmentation before assigning different labels to disjoint regions as believed in the original sample.\n",
-    "\n",
-    "Watershed segmentation can distinguish touching objects. Markers are placed at local minima and expanded outward until there is a collision with markers from another region. The inverse intensity image transforms bright cell regions into basins which should be filled.\n",
-    "\n",
-    "In declumping, markers are generated from the distance function. Points furthest from an edge have the highest intensity and should be identified as markers using skimage.feature.peak_local_max. Regions with pinch points should be assigned multiple markers."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary=morphology.binary_erosion(img2to,selem=ball)\n",
-    "\n"
+    "binary=morphology.binary_erosion(img2to,selem=ball)"
    ]
   },
   {
@@ -426,7 +402,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Unsupervised classification - flood fill"
+    "In general, there's some much one can segment using only classical filters and thresholding. A complete investigation will often include machine learning methods using unsupervised and supervised classification of voxels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Supervised classification using markers"
    ]
   },
   {
