--- a/tutorial_notebooks/03_danials19_wrkshp.ipynb
+++ b/tutorial_notebooks/03_danials19_wrkshp.ipynb
@@ -135,18 +135,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e04b1a37adce4a119804ded9a77bc986",
+       "model_id": "db72dd5395534ddbb3742ba951c5753e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=5, description='z', max=60), Output()), _dom_classes=('widget-interact',…"
+       "interactive(children=(IntSlider(value=5, description='z', max=60, step=5), Output()), _dom_classes=('widget-in…"
       ]
      },
      "metadata": {},
@@ -404,6 +404,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa2eeb4863824390abadd8a15352c39a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(cmap='Cold and Hot', geometries=[], gradient_opacity=0.4, point_sets=[], rendered_image=<itkImagePython…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import itk\n",
+    "from itkwidgets import view\n",
+    "image_itk = itk.GetImageFromArray(binary.astype(np.uint8))\n",
+    "view(image_itk, cmap='Cold and Hot', slicing_planes=True,gradient_opacity=0.4)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -578,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,34 +617,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df4b71ef9a494d83b7307688d82c817d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='z', max=200), Output()), _dom_classes=('widget-interact'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import itk\n",
-    "from itkwidgets import view"
+    "a = output\n",
+    "def slicer(z):\n",
+    "    plt.imshow(a[z,:,:], cmap='gray')\n",
+    "interact(slicer, z=widgets.IntSlider(min=0,max=200,step=1,value=5));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'binary' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-4a96833ce466>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mimage_itk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGetImageFromArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbinary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muint8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_itk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Cold and Hot'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mslicing_planes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgradient_opacity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'binary' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Possible precision loss when converting from float64 to uint8\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f4a2f7405324fdea8c271f4edf2a641",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(cmap='Cold and Hot', geometries=[], gradient_opacity=0.4, point_sets=[], rendered_image=<itkImagePython…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "image_itk = itk.GetImageFromArray(binary.astype(np.uint8))\n",
-    "view(image_itk, cmap='Cold and Hot', slicing_planes=True,gradient_opacity=0.4)"
+    "from skimage import img_as_ubyte\n",
+    "o = img_as_ubyte(output)\n",
+    "view(o,cmap='Cold and Hot', slicing_planes=True,gradient_opacity=0.4)"
    ]
   },
   {
