--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,13 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e1c5bbb26414f3bb760ada502c2e093",
+       "model_id": "d63d9cd618aa454e9f228a25a7b11ee9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1256d4ba8>"
+       "<matplotlib.image.AxesImage at 0x1321a69b0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -429,15 +429,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ITK and ITKwidgets in itkwidgets\n",
-    "- VTK is a powerful scientific visualization library with Python bindings, and speedy C++ backend. The library itkwidgets provides interactive ipywidgets to visualize images in 2D and 3D; \n",
-    "- ITKwidgets are Jupyter widgets to visualize images, point sets, and meshes;\n",
+    "# Volume rendering with ITK and ITKwidgets\n",
+    "- VTK is a powerful scientific visualization library with Python bindings, and speedy C++ backend. \n",
+    "- itkwidgets provides interactive ipywidgets to visualize images in 2D and 3D, point sets, and meshes in the Jupyter notebook;\n",
+    "- These widgets are built on itk.js and vtk.js;\n",
     "- More at: [[repo]](https://github.com/InsightSoftwareConsortium/itkwidgets) [[examples]](https://itk.org/ITKExamples/src/index.html) [[docs]](https://itkpythonpackage.readthedocs.io/en/latest/Quick_start_guide.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,13 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ec26834723747dfa24c1a556b2eb937",
+       "model_id": "c4ef700511d84819a9c2fc66ef5d3503",
        "version_major": 2,
        "version_minor": 0
       },
@@ -468,35 +469,69 @@
    "source": [
     "#Reformat the numpy array into an itk matrix\n",
     "image = itk.GetImageFromArray(relabeled.astype(np.int16))\n",
-    "view(image, slicing_planes=True)"
+    "view(image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#Reading with itk\n",
-    "input_filename=\"data/bead_pack_artifacts_small.tif\"\n",
-    "image = itk.imread(input_filename)\n",
-    "view(image, cmap='Cold and Hot', slicing_planes=True,gradient_opacity=0.4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Data shape: (60, 256, 256)\n",
-      "* Data type:  int16\n",
-      "* Data range: (0, 9)\n"
+      "[0.29 0.26 0.26]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rescaled_spacing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fixing spacing\n",
+    "image.SetSpacing(rescaled_spacing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Beyond cell microscopy\n",
+    "- microCT of materials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "input_filename=\"data/bead_pack_artifacts_small.tif\"\n",
+    "image = itk.imread(input_filename)\n",
+    "#view(image, cmap='Cold and Hot', slicing_planes=True,gradient_opacity=0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Data shape: (200, 200, 200)\n",
+      "* Data type:  uint8\n",
+      "* Data range: (29, 239)\n"
      ]
     }
    ],
@@ -518,22 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0945deca10a746ea9d579de2d11c2833",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(cmap='Cold and Hot', geometries=[], gradient_opacity=0.4, point_sets=[], rendered_image=<itkImagePython…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Converting input from bool to <class 'numpy.uint8'> for compatibility.\n"
+     ]
     }
    ],
    "source": [
@@ -542,7 +570,7 @@
     "image_np=image_np[::downsample,::downsample,::downsample]\n",
     "image_np = image_np>threshold_isodata(image_np)\n",
     "image_itk = itk.GetImageFromArray(image_np.astype(np.int16))\n",
-    "view(image_itk, cmap='Cold and Hot',rotate=True, gradient_opacity=0.4)"
+    "#view(image_itk, cmap='Cold and Hot',rotate=True, gradient_opacity=0.4)"
    ]
   },
   {
