--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -430,7 +430,7 @@
    "metadata": {},
    "source": [
     "# Volume rendering with ITK and ITKwidgets\n",
-    "- VTK is a powerful scientific visualization library with Python bindings, and speedy C++ backend. \n",
+    "- VTK/ITK are powerful scientific visualization library with Python bindings, and speedy C++ backend. \n",
     "- itkwidgets provides interactive ipywidgets to visualize images in 2D and 3D, point sets, and meshes in the Jupyter notebook;\n",
     "- These widgets are built on itk.js and vtk.js;\n",
     "- More at: [[repo]](https://github.com/InsightSoftwareConsortium/itkwidgets) [[examples]](https://itk.org/ITKExamples/src/index.html) [[docs]](https://itkpythonpackage.readthedocs.io/en/latest/Quick_start_guide.html)"
@@ -448,28 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4ef700511d84819a9c2fc66ef5d3503",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(geometries=[], gradient_opacity=0.22, point_sets=[], rendered_image=<itkImagePython.itkImageSS3; proxy …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Reformat the numpy array into an itk matrix\n",
     "image = itk.GetImageFromArray(relabeled.astype(np.int16))\n",
-    "view(image)"
+    "#view(image)"
    ]
   },
   {
